[YPT-06] - Adicionando Fluxo de Configuração do Painel
